force-app/main/default/objects/Quote/fields/Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Contact_Number__c</fullName>
    <defaultValue>&quot;GC CO2 Trading - Hotline +44 207 546 3714&quot;</defaultValue>
    <label>ContactNumber</label>
    <length>100</length>
    <type>Text</type>
</CustomField>