force-app/main/default/objects/Quote/fields/Market_Commentry__c.field-meta.xml
<CustomField>
    <fullName>Market_Commentry__c</fullName>
    <label>Market Commentry</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>