force-app/main/default/objects/Quote/fields/Quote_Date__c.field-meta.xml
<CustomField>
    <fullName>Quote_Date__c</fullName>
    <defaultValue>now()</defaultValue>
    <label>Quote Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>